# FLEXBOX

./: .gitattributes  .gitignore  README.md  build-frontend.mjs  build.py  package-lock.json  package.json  run.py  tailwind.config.ts  tsconfig.json  vite.config.ts
backend/: main.py  requirements.txt  sidecar_main.py
frontend/: index.html
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: DraggableResizableWindow.svelte  MainScreen.svelte
frontend/src/lib/api/: client.ts
frontend/src/lib/modules/: catalog.ts  definitions.ts  registry.ts  types.ts
frontend/src/lib/state/: moduleManager.svelte.ts  spreadsheetState.svelte.ts  workspaceSession.ts
frontend/src/lib/types/: windowChrome.ts
frontend/src/lib/utils/: theme.ts
frontend/src/modules/: AuthModule.svelte  CustomizeModule.svelte  EmptyModule.svelte  SpreadsheetModule.svelte  SystemShutdownModule.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
